# builder-gps

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  requirements.txt
apps/api/app/: __init__.py  config.py  main.py  schemas.py
apps/api/app/data/: sessions.json
apps/api/app/prompts/: __init__.py  compute-path.md  critic.md  decompose-agent.md  decompose-goal.md  loader.py
apps/api/app/routes/: admin.py  builder.py  path.py  sessions.py
apps/api/app/services/: __init__.py  agent_client.py  compute_path.py  critic.py  decompose_agent.py  decompose_goal.py  embeddings_client.py  ical_export.py  llm_client.py  markdown_export.py  path_diff.py  path_with_critic.py  rate_limit.py  schedule_loader.py  shortlist_sessions.py  tavily_client.py
apps/api/app/storage/: __init__.py  capability_resources_store.py  decompose_traces_store.py  embeddings_store.py  sessions_override_store.py  sqlite_store.py
apps/api/scripts/: bootstrap-embeddings.py  dev.sh  verify-api-keys.py
apps/mcp/: .env.example  README.md  pyproject.toml
apps/mcp/builder_gps_mcp/: __init__.py  api_client.py  server.py
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/try/: page.tsx
apps/web/components/: admin-sessions-importer.tsx  builder-app.tsx  builder-form.tsx  calendar-export.tsx  capability-resources.tsx  day-block.tsx  logo.tsx  mcp-connect-modal.tsx  path-export-button.tsx  path-loading.tsx  providers.tsx  readiness-bar.tsx  reroute-notice.tsx  session-card.tsx  stack-combobox.tsx  timeline.tsx  youtube-embed.tsx
apps/web/components/landing/: closing-cta.tsx  (+8 more)
apps/web/lib/: api-client.ts  constants.ts  store.ts  use-sessions.ts
(+7 files in other folders)
