[project]
name = "builder-gps-mcp"
version = "0.1.0"
description = "MCP server for Builder GPS — chat with your AABW schedule from any AI tool."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
]

[project.scripts]
builder-gps-mcp = "builder_gps_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["builder_gps_mcp*"]
