[project]
name = "builder-gps-mcp"
version = "0.1.1"
description = "MCP server for Builder GPS — chat with your Agentic AI Build Week schedule from any AI editor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Builder GPS contributors" },
]
keywords = ["mcp", "ai", "agents", "aabw", "schedule", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/Kyle8Bits/builder-gps"
Repository = "https://github.com/Kyle8Bits/builder-gps"
Issues = "https://github.com/Kyle8Bits/builder-gps/issues"

[project.scripts]
builder-gps-mcp = "builder_gps_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["builder_gps_mcp*"]
